property type updated
