# app/Http/Controllers/Controller.php
@@ -7,13 +7,22 @@ use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
 
 /**
- * @OA\Info(title="Landlord Property Manager API", version="1.0")
- * @OA\SecurityScheme(
- * securityScheme="bearer_token",
- * type="http",
- * scheme="bearer",
+ * @OA\Info(
+ *      version="1.0",
+ *      title="Landlord Property Manager API",
+ *      description="L5 Swagger OpenApi",
  * )
-*/
+ * @OA\SecurityScheme(
+ *      securityScheme="bearer_token",
+ *      type="http",
+ *      scheme="bearer",
+ * )
+ * 
+ * @OA\Server(
+ *      url=L5_SWAGGER_CONST_HOST,
+ *      description="Demo LPM API Server"
+ * )
+ */
 
 class Controller extends BaseController
 {
