# app/Http/Resources/PropertyTypeResource.php
@@ -1,0 +1,37 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+/**
+ * @OA\Schema(
+ *     title="Property type Resource",
+ *     description="Property type resource",
+ *     @OA\Xml(
+ *         name="Property type Resource"
+ *     )
+ * )
+ */
+class PropertyTypeResource extends JsonResource
+{
+    /**
+     * @OA\Property(
+     *     title="Data",
+     *     description="Data wrapper"
+     * )
+     *
+     * @var \App\Virtual\Models\PropertyType[]
+     */
+    private $data;
+    
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'name' => $this->name,
+            'description' => $this->description
+        ];
+    }
+}
