# storage/api-docs/api-docs.json
@@ -2,8 +2,15 @@
     "openapi": "3.0.0",
     "info": {
         "title": "Landlord Property Manager API",
+        "description": "L5 Swagger OpenApi",
         "version": "1.0"
     },
+    "servers": [
+        {
+            "url": "http://127.0.0.1:8000/api",
+            "description": "Demo LPM API Server"
+        }
+    ],
     "paths": {
         "/api/login": {
             "post": {
@@ -47,14 +54,14 @@
                 }
             }
         },
-        "/api/property-type": {
+        "/property-type": {
             "get": {
                 "tags": [
                     "Property Type"
                 ],
-                "summary": "List of property types",
+                "summary": "List of property type",
                 "description": "Returns list of property types",
-                "operationId": "4a2b249c3eb957c543cb397fb436cb3f",
+                "operationId": "72e9393ec622285c08c70e4f79b56836",
                 "responses": {
                     "200": {
                         "description": "Successful operation"
@@ -71,10 +78,116 @@
                         "bearer_token": []
                     }
                 ]
+            },
+            "post": {
+                "tags": [
+                    "Property Type"
+                ],
+                "summary": "Store new property type",
+                "description": "Returns property type data",
+                "operationId": "storePropertyType",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/PropertyTypeRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/PropertyType"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
             }
         }
     },
     "components": {
+        "schemas": {
+            "PropertyTypeRequest": {
+                "title": "Store Property type request",
+                "description": "Store Property type request body data",
+                "required": [
+                    "name"
+                ],
+                "properties": {
+                    "name": {
+                        "title": "name",
+                        "description": "Name of the new property type",
+                        "type": "string",
+                        "example": "Hotel"
+                    },
+                    "description": {
+                        "title": "description",
+                        "description": "Description of the new property type",
+                        "type": "string",
+                        "example": "Hotel"
+                    }
+                },
+                "type": "object"
+            },
+            "PropertyTypeResource": {
+                "title": "Property type Resource",
+                "description": "Property type resource",
+                "properties": {
+                    "": {
+                        "title": "Data",
+                        "description": "Data wrapper",
+                        "type": "array",
+                        "items": {}
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "Property type Resource"
+                }
+            },
+            "PropertyType": {
+                "title": "Property Type",
+                "description": "Property type model",
+                "properties": {
+                    "name": {
+                        "title": "name",
+                        "description": "Name of the new property type",
+                        "type": "string",
+                        "example": "Hotel"
+                    },
+                    "description": {
+                        "title": "description",
+                        "description": "Description of the new property type",
+                        "type": "string",
+                        "example": "Hotel"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "Property type"
+                }
+            }
+        },
         "securitySchemes": {
             "bearer_token": {
                 "type": "http",
